Reformat sources for ASF/James coding style guidelines (mainly spaces for indentation).
git-svn-id: https://svn.apache.org/repos/asf/james/jdkim/trunk@824090 13f79535-47bb-0310-9956-ffa450edef68